# snake-c

./: CMakeLists.txt  Makefile
include/: consts.h  food.h  particles.h  snake.h
src/: food.c  main.c  particles.c  snake.c
